--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
     </main>
     <script src="sketch.js"></script>
     <script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/service-worker.js')
-      .then((registration) => {
-        console.log('Service Worker registriert mit dem Scope: ', registration.scope);
-      })
-      .catch((error) => {
-        console.log('Service Worker Registrierung fehlgeschlagen: ', error);
-      });
-  }
 </script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(function(registration) {
+        console.log('Service Worker registriert mit Scope:', registration.scope);
+      })
+      .catch(function(error) {
+        console.log('Service Worker Registrierung fehlgeschlagen:', error);
+      });
+  });
+}
 
   </body>
 </html>
