--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <script src="sketch.js"></script>
     <script>
 </script>
-
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(function(registration) {
+        console.log('Service Worker registriert mit Scope:', registration.scope);
+      })
+      .catch(function(error) {
+        console.log('Service Worker Registrierung fehlgeschlagen:', error);
+      });
+  });
+}
   </body>
 </html>
