--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', function() {
-    navigator.serviceWorker.register('/service-worker.js')
+    navigator.serviceWorker.register('service-worker.js')
       .then(function(registration) {
         console.log('Service Worker registriert mit Scope:', registration.scope);
       })
