--- a/index.html
+++ b/index.html
@@ -17,16 +17,21 @@
     <script src="sketch.js"></script>
     <script>
 </script>
-if ('serviceWorker' in navigator) {
-  window.addEventListener('load', function() {
-    navigator.serviceWorker.register('service-worker.js')
-      .then(function(registration) {
-        console.log('Service Worker registriert mit Scope:', registration.scope);
-      })
-      .catch(function(error) {
-        console.log('Service Worker Registrierung fehlgeschlagen:', error);
-      });
-  });
+if ("serviceWorker" in navigator) {
+  // declaring scope manually
+  navigator.serviceWorker.register("./sw.js", { scope: "./" }).then(
+    (registration) => {
+      console.log("Service worker registration succeeded:", registration);
+    },
+    (error) => {
+      console.error(`Service worker registration failed: ${error}`);
+    },
+  );
+} else {
+  console.error("Service workers are not supported.");
 }
+
+
+  
   </body>
 </html>
