--- a/index.html
+++ b/index.html
@@ -17,23 +17,16 @@
     <script src="sketch.js"></script>
     <script>
 </script>
-
-    
-if ("serviceWorker" in navigator) {
-  // declaring scope manually
-  navigator.serviceWorker.register("./service-worker.js", { scope: "./" }).then(
-    (registration) => {
-      console.log("Service worker registration succeeded:", registration);
-    },
-    (error) => {
-      console.error(`Service worker registration failed: ${error}`);
-    },
-  );
-} else {
-  console.error("Service workers are not supported.");
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(function(registration) {
+        console.log('Service Worker registriert mit Scope:', registration.scope);
+      })
+      .catch(function(error) {
+        console.log('Service Worker Registrierung fehlgeschlagen:', error);
+      });
+  });
 }
-
-
-  
   </body>
 </html>
