--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
     <script src="sketch.js"></script>
     <script>
 </script>
+
+    // Register the service worker
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', function() {
-    navigator.serviceWorker.register('service-worker.js')
-      .then(function(registration) {
-        console.log('Service Worker registriert mit Scope:', registration.scope);
-      })
-      .catch(function(error) {
-        console.log('Service Worker Registrierung fehlgeschlagen:', error);
-      });
+    navigator.serviceWorker.register('serviceWorker.js').then(function(registration) {
+      // Registration was successful
+      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    }, function(err) {
+      // Registration failed
+      console.log('ServiceWorker registration failed: ', err);
+    });
   });
 }
+    
+
   </body>
 </html>
