--- a/index.html
+++ b/index.html
@@ -18,19 +18,17 @@
     <script>
 </script>
 
-    // Register the service worker
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', function() {
-    navigator.serviceWorker.register('service-worker.js').then(function(registration) {
-      // Registration was successful
-      console.log('ServiceWorker registration successful with scope: ', registration.scope);
-    }, function(err) {
-      // Registration failed
-      console.log('ServiceWorker registration failed: ', err);
-    });
+    navigator.serviceWorker.register('service-worker.js')
+      .then(function(registration) {
+        console.log('Service Worker registriert mit Scope:', registration.scope);
+      })
+      .catch(function(error) {
+        console.log('Service Worker Registrierung fehlgeschlagen:', error);
+      });
   });
 }
-    
 
   </body>
 </html>
