--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
-          navigator.serviceWorker.register('/service-worker.js')  // Absolute Pfade verwenden
+         navigator.serviceWorker.register('/misha030220.github.io/service-worker.js')  // Absolute Pfade verwenden
             .then(function(registration) {
               console.log('Service Worker registriert mit Scope:', registration.scope);
             })
