--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <main></main>
     <script src="sketch.js"></script>
+<script src="/TheColorGame/sketch.js"></script>
 
     <!-- Registriere den Service Worker im <script>-Tag -->
     <script>
